# AutoSubMaker

./: .gitignore  README.md  pyproject.toml  run.bat
docs/: project_structure.md  requirements.md  ui_design.md
src/autosubmaker/: __init__.py  __main__.py  main.py
src/autosubmaker/bootstrap/: __init__.py  dependency_check.py  startup.py
src/autosubmaker/config/: __init__.py  app_paths.py  app_settings.py  settings_store.py
src/autosubmaker/integrations/: ffmpeg_runner.py  whisper_runner.py
src/autosubmaker/models/: __init__.py  app_status.py  job.py  media_info.py  process_result.py  subtitle_options.py  subtitle_result.py  subtitle_style.py  transcription_options.py  transcription_result.py
src/autosubmaker/services/: audio_extract_service.py  burnin_service.py  environment_service.py  ffmpeg_download_service.py  font_catalog_service.py  media_probe_service.py  output_service.py  queue_service.py  subtitle_service.py  temp_file_service.py  transcription_service.py  whisper_model_service.py
src/autosubmaker/ui/: __init__.py  app_shell.py
src/autosubmaker/ui/components/: __init__.py  header_bar.py  input_card.py  job_table.py  log_panel.py  settings_panel.py
src/autosubmaker/utils/: logger.py  process_runner.py  text_splitter.py  timecode.py
tests/: test_burnin_service.py  test_font_catalog_service.py  test_input_card.py  test_media_info.py  test_process_runner.py  test_subtitle_service.py  test_temp_file_service.py  test_text_splitter.py  test_timecode.py  test_transcription_options.py  test_transcription_service.py
(+5 files in other folders)
