[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "autosubmaker"
version = "0.1.0"
description = "Local subtitle generation and burn-in tool for video files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "heconis" },
]
dependencies = [
  "nicegui>=3.9,<4.0",
  "pywebview>=5.4,<6.0",
  "faster-whisper>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
autosubmaker = "autosubmaker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autosubmaker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
